--- a/.github/workflows/bookdepth.yml
+++ b/.github/workflows/bookdepth.yml
@@ -23,6 +23,7 @@ jobs:
     strategy:
       matrix:
         symbol: [BTCUSDT, ETHUSDT, BNBUSDT, SOLUSDT, XRPUSDT, ENAUSDT]
+      max-parallel: 1
 
     steps:
       - name: Checkout
