--- a/.github/workflows/bookdepth.yml
+++ b/.github/workflows/bookdepth.yml
@@ -1,4 +1,3 @@
-# .github/workflows/bookdepth-incremental.yml
 name: "📚 BookDepth: Historical & Daily Incremental"
 
 on:
@@ -15,15 +14,13 @@ on:
         description: "Enddatum   (YYYY-MM-DD). Nur für historical."
         required: false
   schedule:
-    # Nur für daily
+    # nur daily
     - cron: '0 2 * * *'
 
 jobs:
   bookdepth:
     runs-on: ubuntu-latest
     strategy:
-      matrix:
-        symbol: [BTCUSDT, ETHUSDT, BNBUSDT, SOLUSDT, XRPUSDT, ENAUSDT]
       max-parallel: 1
 
     steps:
@@ -39,23 +36,13 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install --upgrade pandas numpy scipy scikit-learn pyarrow parquet-tools
+          pip install --upgrade pandas numpy scipy scikit-learn pyarrow
 
-      - name: Run BookDepth pipeline
-        env:
-          MODE: ${{ github.event.inputs.mode }}
-          START_DATE: ${{ github.event.inputs.start_date }}
-          END_DATE: ${{ github.event.inputs.end_date }}
-        run: |
-          # das pipeline-skript übernimmt:
-          #  • Download (raw/bookDepth/<SYM>)
-          #  • Extraktion der Basis-Features
-          #  • Rolling/Micro-Features
-          #  • Append/Resume Logic
-          python daily_bookdepth_pipeline.py
+      - name: Run BookDepth pipeline (Downloads, Features, Rolling)
+        run: python daily_bookdepth_pipeline.py
 
-      - name: Commit & Push
-        if: ${{ github.ref == 'refs/heads/main' }}
+      - name: Commit & Push feature-Files
+        if: github.ref == 'refs/heads/main'
         run: |
           git config user.name  "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
