--- a/.github/workflows/funding_features.yml
+++ b/.github/workflows/funding_features.yml
@@ -63,7 +63,7 @@ jobs:
             fi
             git commit -m "$MSG"
             git pull --rebase --autostash origin main
-            git push origin HEAD:main
+            git push --force-with-lease origin HEAD:main
           else
             echo "✔️ Keine Änderungen für $SYMBOL"
           fi
